# devoteam_icon_generator

./: .gitignore  README.md  pyproject.toml  report.md
src/devoteam_icon_generator/: crew.py  main.py
src/devoteam_icon_generator/config/: agents.yaml  tasks.yaml
src/devoteam_icon_generator/tools/: icon_generator_tool.py
