[tool.poetry]
name = "devoteam_icon_generator"
version = "0.1.0"
description = "devoteam_icon_generator using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.35.8" }

[tool.poetry.scripts]
devoteam_icon_generator = "devoteam_icon_generator.main:run"
train = "devoteam_icon_generator.main:train"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
